# projectkiwi-client

./: README.md  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/source/: basic_usage.rst  conf.py  projectkiwi.rst
projectkiwi/: Client.py  __init__.py  models.py
projectkiwi3/: Client.py  __init__.py  models.py
tests/: test_annotations.py  test_basics.py  test_tasks.py
