[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projectkiwi3"
description = "This module is a means for interfacing with projectkiwi.io using python."
readme = "README.rst"
authors = [{name = "Michael Thoreau", email = "michael@projectkiwi.io"}]
dynamic = ["version"]
dependencies = [
  "requests",
  "pydantic",
  "numpy",
  "pillow"
]